@@ -244,11 +244,15 @@ if (UNIX)
 
         endif()
 
+        if (!X11_xkbfile_FOUND)
+            message (FATAL_ERROR "Missing library: xkbfile")
+        endif()
+
         if (HAVE_Xtst)
 
             # Xtxt depends on X11.
             set (HAVE_X11)
-            list (APPEND libs Xtst X11)
+            list (APPEND libs Xtst X11 xkbfile)
 
         else()
 
